CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (pluginsdk)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET (SOURCES
        ${SRC_DIR}/Plugin.cpp
    )

SET (HEADERS
        ${INCLUDE_DIR}/Plugin.h
    )

ADD_LIBRARY (pluginsdk STATIC ${SOURCES} ${HEADERS})
TARGET_COMPILE_OPTIONS (pluginsdk PUBLIC -fPIC)
TARGET_INCLUDE_DIRECTORIES (pluginsdk INTERFACE ${INCLUDE_DIR})
